overflow mobile bug fix

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,6 +32,9 @@ a{
 		transition:all 0.33s cubic-bezier(0.125, 0.75, 0.415, 1);
 	}
 }
+.main{
+	height:100vh;
+}
 header{
 	width:100%;
 	height:70px;
